@@ -1,6 +1,6 @@
-var CloudCommander, Util, DOM, CodeMirror;
+var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
 /* object contains editors CodeMirror */
- (function(CloudCmd, Util, DOM){
+ (function(CloudCmd, Util, DOM, CloudFunc){
     'use strict';
     
     var KeyBinding                  = CloudCommander.KeyBinding,
@@ -78,7 +78,19 @@ var CloudCommander, Util, DOM, CodeMirror;
                     DOM.remove(lCSS, document.head);
                 },
                  'Ctrl-S': function(){
-                     Util.log(lEditor.getValue());
+                    CloudCmd.getConfig(function(pConfig){
+                        var lURL = pConfig && pConfig.api_url + DOM.getCurrentPath();
+                        
+                        DOM.ajax({
+                            method  : 'put',
+                            url     : lURL,
+                            data    : lEditor.getValue(),
+                            error   : DOM.Images.showError,
+                            success : function(pData){
+                                Util.log(pData);
+                            }
+                         });
+                    });
                  }
             },
             readOnly    : ReadOnly
@@ -211,4 +223,4 @@ var CloudCommander, Util, DOM, CodeMirror;
     
     CloudCmd.Editor.CodeMirror      = CodeMirrorEditor;
 
-})(CloudCommander, Util, DOM);
+})(CloudCommander, Util, DOM, CloudFunc);
