@@ -107,7 +107,7 @@
         if(lRet){
             var p   = pParams;
             p.name  = Util.removeStr(pParams.name, CloudFunc.FS) || '/';
-            
+            console.log(p.name);
             switch(p.method){
                 case 'GET':
                     fs.stat(p.name, function(pError, pStat){
@@ -132,7 +132,6 @@
                     break;
                     
                 case 'PUT':
-                    console.log(p.request.url);
                     var lQuery = main.getQuery(p.request);
                         p.name = Util.removeStr(p.name, '?dir');
                     
@@ -152,7 +151,7 @@
                         });
                         
                         p.request.on('end', function(){
-                            main.sendResponse(pParams, 'file ' + p.name + ' created');
+                            main.sendResponse(pParams, 'writed: ' + p.name);
                         });
                                                 
                         //p.request.pipe(process.stdout);
